--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "django-iyzico"
-version = "0.1.0b1"
+version = "0.2.0"
 description = "Django-native integration for Iyzico payment gateway - Turkey's leading payment solution with PCI DSS compliance"
 readme = {file = "README.md", content-type = "text/markdown"}
 authors = [
@@ -58,6 +58,10 @@ keywords = [
     "webhooks",
     "turkish-lira",
     "online-payments",
+    "subscriptions",
+    "recurring-billing",
+    "installments",
+    "multi-currency",
 ]
 requires-python = ">=3.8"
 dependencies = [
